@@ -2,6 +2,8 @@ v0.1.7.3 ()
   New features
 	* Refactoring of the PuppetDB API for interfacing with the facter library.
   Bugs fixed
+	* Defines with spurious parameters, or unset mandatory parameters, should
+	now be catched.
 	* Exception handling for the HTTP failures.
 	* Handles undefined variables in Ruby templates.
 	* Undefined variables in Erbs now always throw exceptions. This is
